langkit/src/gpr_parser-analysis-c.ads


   function gpr_unit_root (Unit : gpr_analysis_unit)
                                           return gpr_base_node
      with Export        => True,
           Convention    => C,
           External_name => "gpr_unit_root";
   --  Return the root AST node for this unit, or NULL if there is none.

   procedure gpr_unit_first_token
     (Unit  : gpr_analysis_unit;
      Token : gpr_token_Ptr)
      with Export        => True,
           Convention    => C,
           External_name => "gpr_unit_first_token";
   --  Return a reference to the first token scanned in this unit.

   procedure gpr_unit_last_token
     (Unit  : gpr_analysis_unit;
      Token : gpr_token_Ptr)
      with Export        => True,
           Convention    => C,
           External_name => "gpr_unit_last_token";
   --  Return a reference to the last token scanned in this unit.

   function gpr_unit_filename
     (Unit : gpr_analysis_unit)
      return chars_ptr
      with Export        => True,
           Convention    => C,
           External_name => "gpr_unit_filename";
   --  Return the filename an unit is associated to.
   --
   --  The returned string is dynamically allocated and the caller must free it
   --  when done with it.

   function gpr_unit_diagnostic_count
     (Unit : gpr_analysis_unit) return unsigned
      with Export        => True,
           Convention    => C,
           External_name => "gpr_unit_diagnostic_count";
   --  Return the number of diagnostics associated to this unit.

   function gpr_unit_diagnostic
     (Unit         : gpr_analysis_unit;
      N            : unsigned;
      Diagnostic_P : gpr_diagnostic_Ptr) return int
      with Export        => True,
           Convention    => C,
           External_name => "gpr_unit_diagnostic";
   --  Get the Nth diagnostic in this unit and store it into *DIAGNOSTIC_P.
   --  Return zero on failure (when N is too big).

   function gpr_node_unit
     (Node : gpr_base_node)
      return gpr_analysis_unit
      with Export        => True,
           Convention    => C,
           External_name => "gpr_node_unit";
   --  Return the unit that owns an AST node.

   function gpr_unit_incref
     (Unit : gpr_analysis_unit) return gpr_analysis_unit
      with Export        => True,
           Convention    => C,
           External_name => "gpr_unit_incref";
   --  Increase the reference count to an analysis unit. Return the reference
   --  for convenience.

   procedure gpr_unit_decref (Unit : gpr_analysis_unit)
      with Export        => True,
           Convention    => C,
           External_name => "gpr_unit_decref";
   --  Decrease the reference count to an analysis unit.

   function gpr_unit_context
     (Unit : gpr_analysis_unit)
      return gpr_analysis_context
      with Export        => True,
           Convention    => C,
           External_name => "gpr_unit_context";
   --  Return the context that owns this unit.

   procedure gpr_unit_reparse_from_file
     (Unit : gpr_analysis_unit; Charset : chars_ptr)
      with Export        => True,
           Convention    => C,
           External_name => "gpr_unit_reparse_from_file";
   --  Reparse an analysis unit from the associated file. If Charset is empty
   --  or NULL, use the last charset successfuly used for this unit, otherwise
   --  use it to decode the content of Filename.
   --
   --  If any failure occurs, such as decoding, lexing or parsing failure,
   --  diagnostic are emitted to explain what happened.

   procedure gpr_unit_reparse_from_buffer
     (Unit        : gpr_analysis_unit;
      Charset     : chars_ptr;
      Buffer      : chars_ptr;
      Buffer_Size : size_t)
      with Export        => True,
           Convention    => C,
           External_name => "gpr_unit_reparse_from_buffer";
   --  Reparse an analysis unit from a buffer. If Charset is empty or NULL, use
   --  the last charset successfuly used for this unit, otherwise use it to
   --  decode the content of Filename.
   --
   --  If any failure occurs, such as decoding, lexing or parsing failure,
   --  diagnostic are emitted to explain what happened.

   procedure gpr_unit_populate_lexical_env
     (Unit : gpr_analysis_unit)
      with Export        => True,
           Convention    => C,
           External_name => "gpr_unit_populate_lexical_env";
   --  Populate the lexical environments for this analysis unit, according to
   --  the specifications given in the language spec.

   ---------------------------------
   -- General AST node primitives --
   ---------------------------------

   function gpr_node_kind (Node : gpr_base_node)
      return gpr_node_kind_enum
      with Export        => True,
           Convention    => C,
           External_name => "gpr_node_kind";
   --  Get the kind of an AST node.

   function gpr_kind_name (Kind : gpr_node_kind_enum)
                                           return gpr_text
      with Export        => True,
           Convention    => C,
           External_name => "gpr_kind_name";
   --  Helper for textual dump: return the name of a node kind. The returned
   --  string is a copy and thus must be free'd by the caller.

   function gpr_node_short_image (Node : gpr_base_node)
                                                  return gpr_text
      with Export        => True,
           Convention    => C,
           External_name => "gpr_node_short_image";
   --  Return a representation of NODE as a string.

   procedure gpr_node_sloc_range
     (Node         : gpr_base_node;
      Sloc_Range_P : gpr_source_location_range_Ptr)
      with Export        => True,
           Convention    => C,
           External_name => "gpr_node_sloc_range";
   --  Get the spanning source location range for an AST node.

   function gpr_lookup_in_node
     (Node : gpr_base_node;
      Sloc : gpr_source_location_Ptr) return gpr_base_node
      with Export        => True,
           Convention    => C,
           External_name => "gpr_lookup_in_node";
   --  Return the bottom-most AST node from NODE that contains SLOC, or NULL if
   --  there is none.

   function gpr_node_child_count (Node : gpr_base_node)
                                                  return unsigned
      with Export        => True,
           Convention    => C,
           External_name => "gpr_node_child_count";
   --  Return the number of AST node in NODE's fields.

   function gpr_node_child
     (Node    : gpr_base_node;
      N       : unsigned;
      Child_P : gpr_base_node_Ptr) return int
      with Export        => True,
           Convention    => C,
           External_name => "gpr_node_child";
   --  Get the Nth child AST node in NODE's fields and store it into *CHILD_P.
   --  Return zero on failure (when N is too big).

   function gpr_text_to_locale_string
     (Text : gpr_text) return System.Address
      with Export        => True,
           Convention    => C,
           External_name => "gpr_text_to_locale_string";
   --  Encode some text using the current locale. The result is dynamically
   --  allocated: it is up to the caller to free it when done with it.
   --
   --  This is a development helper to make it quick and easy to print token
   --  and diagnostic text: it ignores errors (when the locale does not support
   --  some characters). Production code should use real conversion routines
   --  such as libiconv's in order to deal with UTF-32 texts.


   -------------------------
   -- Extensions handling --
   -------------------------

   --  The following functions makes it possible to attach arbitrary data to
   --  AST nodes: these are extensions.  Each data is associated with both an
   --  extension ID and a destructor.  AST nodes can have either none or only
   --  one extension for a given ID.  The destructor is called when the AST
   --  node is about to be destroyed itself.
   --
   --  This mechanism is inteded to ease annotating trees with analysis data
   --  but also to host node wrappers for language bindings.

   type gpr_node_extension_destructor is
      access procedure (Node      : gpr_base_node;
                        Extension : System.Address)
      with Convention => C;
   --  Type for extension destructors.  The parameter are the "node" the
   --  extension was attached to and the "extension" itself.

   function gpr_register_extension (Name : chars_ptr)
      return unsigned
      with Export        => True,
           Convention    => C,
           External_name => "gpr_register_extension";
   --  Register an extension and return its identifier.  Multiple calls with
   --  the same name will return the same identifier.

   function gpr_node_extension
     (Node   : gpr_base_node;
      Ext_Id : unsigned;
      Dtor   : gpr_node_extension_destructor)
      return System.Address
      with Export        => True,
           Convention    => C,
           External_name => "gpr_node_extension";
   --  Create an extension slot in "node".  If this node already contains an
   --  extension for "ext_id", return the existing slot.  If not, create such a
   --  slot, associate the "dtor" destructor to it and initialize the slot to
   --  NULL.  Return a pointer to the slot.
   --
   --  Note that the pointer is not guaranteed to stay valid after further
   --  calls to this function.

   ----------
   -- Misc --
   ----------

   function gpr_get_last_exception return gpr_exception_Ptr
     with Export        => True,
          Convention    => C,
          External_Name => "gpr_get_last_exception";
   --  Return exception information for the last error that happened in the
   --  current thread. Will be automatically allocated on error and free'd on
   --  the next error.

   procedure Clear_Last_Exception;
   --  Free the information contained in Last_Exception

   procedure Set_Last_Exception
     (Exc      : Exception_Occurrence;
      Is_Fatal : Boolean := True);
   --  Free the information contained in Last_Exception and replace it with
   --  newly allocated information from Exc.

   function gpr_token_kind_name (Kind : int) return chars_ptr
      with Export => True,
           Convention => C,
           External_Name => "gpr_token_kind_name";
   --  Return a human-readable name for a token kind.
   --
   --  The returned string is dynamically allocated and the caller must free it
   --  when done with it.
   --
   --  If the given kind is invalid, return NULL and set the last exception
   --  accordingly.

   procedure gpr_token_next
     (Token      : gpr_token_Ptr;
      Next_Token : gpr_token_Ptr)
      with Export        => True,
           Convention    => C,
           External_name => "gpr_token_next";
   --  Return a reference to the next token in the corresponding analysis unit.

   procedure gpr_token_previous
     (Token          : gpr_token_Ptr;
      Previous_Token : gpr_token_Ptr)
      with Export        => True,
           Convention    => C,
           External_name => "gpr_token_previous";
   --  Return a reference to the previous token in the corresponding analysis
   --  unit.

   ------------------------
   -- Conversion helpers --
   ------------------------

   --  The following conversion helpers are use by the various C bindings

   function Wrap (S : Source_Location) return gpr_source_location is
     ((S.Line, S.Column));
   function Unwrap (S : gpr_source_location) return Source_Location is
     ((S.Line, S.Column));

   function Wrap (S : Source_Location_Range) return gpr_source_location_range is
     ((Start_S => (S.Start_Line, S.Start_Column),
       End_S   => (S.End_Line,   S.End_Column)));
   function Unwrap (S : gpr_source_location_range) return Source_Location_Range is
     ((S.Start_S.Line, S.End_S.Line,
       S.Start_S.Column, S.End_S.Column));

   function Wrap (S : Unbounded_Wide_Wide_String) return gpr_text;

   function Wrap_Alloc (S : Text_Type) return gpr_text;
